<package format="2">
  <name>os5000</name>
  <version>0.1.0</version>
  <description>
    Ocean Server OS5000 digital compass ROS driver.
    Details at http://www.ocean-server.com/compass.html.
  </description>
  <author>Thomas Denewiler</author>
  <maintainer email="tdenewiler@gmail.com">Thomas Denewiler</maintainer>
  <license>BSD</license>
  <url>http://github.com/tdenewiler/os5000</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>rostest</test_depend>
</package>
